# FaceDetectionBasics

./: .gitignore  LICENSE.md  README.md  installVideoCodecs.txt  testVersion  testVersion.cpp
VisionApp/: CMakeLists.txt
VisionApp/source/: CMakeLists.txt
VisionApp/source/ImgOps/: CMakeLists.txt  basicOps  basicOps.cpp  basicOps.hpp  convertToGray  findImgChannels  flipImg  flipImg.cpp  mouseClick.hpp  runImgs.cpp
VisionApp/source/colorManipulation/: CMakeLists.txt  ColorDetector.cpp  ColorDetector.hpp  detectColor  detectColor.cpp
VisionApp/source/pixelManipulation/: CMakeLists.txt  addImgs  addImgs.cpp  addImgs.hpp  reduceColor  reduceColor.cpp  reduceColor.hpp  reduceColorEfficient  reduceColorEfficient.cpp  reduceColorEfficient.hpp  reduceColorIterator  reduceColorIterator.cpp  reduceColorIterator.hpp  reduceColorMatrix  reduceColorMatrix.cpp  reduceColorMatrix.hpp  saltPepper  saltPepper.hpp  sharpenEdges  sharpenEdges.cpp  sharpenEdges.hpp  sharpenFilter.cpp  splitProcess  splitProcess.cpp  splitProcess.hpp
learning_opencv/source/: Makefile  main.cpp  my_cv  picture1.cpp  picture1.hpp  video1.cpp  video1.hpp  video2.cpp  video2.hpp
myVision/: basicOps_Makefile_211217.bak
myVision/source/cleanup_scripts/intro/: clean_debug.py  clean_release.py  cleanall.py
myVision/source/intro/: Makefile  imgDS.cpp  imgDS.hpp  imgVarDS.cpp  imgVarDS.hpp  videoCopy.cpp  videoCopy.hpp  videoDownSample.cpp  videoDownSample.hpp
myVision/test/introTests/: testCP.cpp  testDS.cpp  testImgDS.cpp
notes/: 1.Mat
notes/day-1-basic-operations/: rotate.cpp  rotate.py
opencv_beginners/: build_project.py
opencv_beginners/Docs/: help.txt  make_help.txt
opencv_beginners/Makefile_bak/: Makefile.bak.211217
opencv_beginners/source/: Makefile  build_project.py
opencv_beginners/source/basicImgOps/: .Makefile.swp  Makefile  cleanup.py  cropResize  cropResize.cpp  cropResize.hpp  highguiMouse.cpp  highguiMouse.hpp  imageDraw.cpp  imageDraw.hpp  readWriteDisplay.cpp  readWriteDisplay.hpp  rotation.cpp  rotation.hpp
opencv_beginners/source/basicVideoOps/: Makefile  videoRead.cpp  videoRead.hpp  videoWrite.cpp  videoWrite.hpp
opencv_beginners/source/cleanup_scripts/basicImgOpsClean/: clean_debug.py  clean_release.py  cleanall.py
opencv_beginners/source/cleanup_scripts/basicVideoOpsClean/: clean_debug.py  clean_release.py  cleanall.py
opencv_beginners/test/basicImgOpsTests/: testCR.cpp  testDraw.cpp  testHighguiMouse.cpp  testRW.cpp  testRot.cpp
opencv_beginners/test/basicVideoOpsTests/: testVideoRead.cpp  testVideoWrite.cpp
threeVision/source/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json
threeVision/source/ImgOps/: Makefile  basicOps  cmake_install.cmake  convertToGray  convertToGray.cpp  findImgChannels.cpp  flipImg.hpp
threeVision/source/colorManipulation/: CMakeLists.txt  ColorDetector.cpp  ColorDetector.hpp  Makefile  cmake_install.cmake  detectColor.cpp
threeVision/source/nbproject/: configurations.xml  project.properties  project.xml
threeVision/source/nbproject/private/: Default.properties  configurations.xml  private.xml
threeVision/source/pixelManipulation/: CMakeLists.txt  Makefile  addImgs  cmake_install.cmake  reduceColorEfficient  reduceColorEfficient.cpp  reduceColorIterator  saltPepper  saltPepper.cpp  sharpenEdges
